[package]
name = "rust-timeseries-db"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C", "target-cpu=native"]

[[bin]]
name = "server"
path = "server/main.rs"

[lib]
name = "rtdb"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# binary (de)serialization
rkyv = { version = "0.7.39", features = ["validation"] }
bytecheck = "0.6.9"

# not being used AFAIK
rayon = "1.5.3"

# server
tokio = { version = "1.21.1", features = ["full"]}
axum = "0.5.16"

serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"

# query language parser
nom = "7.1.1"

log = "0.4.17"
lazy_static = "1.4.0"
static_init = "1.0.3"
csv = "1.1.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "storage"
path = "benches/storage.rs"
harness = false

[[bench]]
name = "lang"
path = "benches/lang.rs"
harness = false
