[package]
name = "rtdb_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtdb_cli"
path = "src/main.rs"

[dependencies]
rtdb_client = { path = "../client" }

rustyline = "10.0.0"
tokio = { version = "1.21.1", features = ["full"] } # for running tests with async


chrono = "0.4.22"

# TEST jemallocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
