[package]
name = "rtdb"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C", "target-cpu=native"]

[lib]
name = "rtdb"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }

# binary (de)serialization
rkyv = { version = "0.7.39", features = ["validation"] }
bytecheck = "0.6.9"

# server
axum = "0.5.16"

# serialization / deserialization
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"

# authentication
sha2 = "0.10.6"
hex = "0.4.3"

# query language parser
nom = "7.1.1"

log = "0.4.17"
once_cell = "1.15.0"

fast-float = "0.2"
bitreader = "0.3.6"

byteorder = "1.4.3"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "storage"
path = "../benches/storage.rs"
harness = false

[[bench]]
name = "lang"
path = "../benches/lang.rs"
harness = false

[[bench]]
name = "network"
path = "../benches/network.rs"
harness = false

