[package]
name = "rtdb_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtdb_server"
path = "src/main.rs"



# TEST jemallocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"


[dependencies]
rtdb = { path = "../rtdb" }

tokio = { version = "1.21.1", features = ["full"] }
