[workspace]

[package]
name = "rtdb_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rtdb_test"
path = "src/main.rs"

[dependencies]
rtdb_client = { path = "../../client" }

postgres = "0.19.4"
influxdb = "0.5.2"


# TEST jemallocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"